syntax = "proto3";

// パッケージ名
package game;

// コードが自動生成されるディレクトリを指定
option go_package = "pb/;pb";

// 他のパッケージのメッセージ型のimport
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// APIにおけるサービスの定義
service RockPaperScissorsService {
  // ジャンケンの実施
  rpc PlayGame (PlayRequest) returns (PlayResponse) {
    option (google.api.http) = {
      post: "/v1/game/play"
      body: "*"
    };
  }
  // 結果の確認
  rpc ReportMatchResults (ReportRequest) returns (ReportResponse) {
    option (google.api.http) = {
      get: "/v1/results"
    };
  }
  // 通知
  rpc NotifyMessages (NotifyRequest) returns (stream NotifyResponse) {
    option (google.api.http) = {
      post: "/v1/messages/notify"
      body: "*"
    };
  }
  // 数字を複数アップロードし、合計値を返す
  rpc SumValues (stream SumRequest) returns (SumResponse) {
    option (google.api.http) = {
      get: "/v1/sum/values"
      body: "*"
    };
  }
  // チャット
  rpc ChatMessages (stream ChatRequest) returns (stream ChatResponse) {}
}

// enumでぐー、ちょき、ぱーの定義
enum HandShapes {
  HAND_SHAPES_UNKNOWN = 0;
  ROCK = 1;
  PAPER = 2;
  SCISSORS = 3;
}

// enumで勝敗とあいこを定義
enum Result {
  RESULT_UNKNOWN = 0;
  WIN = 1;
  LOSE = 2;
  DRAW = 3;
}

// 対戦結果のメッセージ型
message MatchResult {
  HandShapes yourHandShapes = 1;
  HandShapes opponentHandShapes = 2;
  Result result = 3;
  google.protobuf.Timestamp create_time = 4;
}

// 今までの試合数、勝敗と対戦結果の履歴を持つメッセージ型
message Report {
  int32 numberOfGames = 1;
  int32 numberOfWins = 2;
  repeated MatchResult matchResults = 3;
}

// PlayGameメソッドのリクエスト用のメッセージ型
message PlayRequest {
  HandShapes handShapes = 1;
}

// PlayGameメソッドのレスポンス用のメッセージ型
message PlayResponse {
  MatchResult matchResult = 1;
}

// ReportMatchResultメソッドのリクエスト用のメッセージ型
message ReportRequest {}

// ReportMatchResultsメソッドのレスポンス用のメッセージ型
message ReportResponse {
  Report report = 1;
}

message NotifyRequest {
  int32 num = 1;
}

message NotifyResponse {
  string message = 1;
}

message SumRequest {
  int32 value = 1;
}

message SumResponse {
  string message = 1;
}

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string message = 1;
}
